--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "@ionic-native/splash-screen": "^4.12.0",
     "@ionic-native/status-bar": "^4.12.0",
     "@ionic/pro": "1.0.20",
-    "@ionic/storage": "2.1.3",
-    "cordova-android": "^6.4.0",
+    "@ionic/storage": "^2.1.3",
+    "cordova-android": "^7.1.1",
     "cordova-ios": "^4.5.4",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.6",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.3",
     "cordova-plugin-whitelist": "^1.3.2",
-    "cordova-sqlite-storage": "^2.1.4",
+    "cordova-sqlite-storage": "2.5.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -43,7 +43,7 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@ionic/app-scripts": "^3.2.0",
     "typescript": "2.4.2"
   },
   "description": "Ionic 3 Start Theme",
